--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.enike.callme">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CallMe">
-        <activity android:name=".Notifications"> </activity>
+        <activity android:name=".hello"></activity>
+        <activity android:name=".FindFriends" />
+        <activity android:name=".Notifications" />
         <activity android:name=".Settings" />
         <activity
             android:name=".MainActivity"
