--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.4.0'
     implementation 'com.firebaseui:firebase-ui-database:4.3.2'
 
+    implementation 'com.opentok.android:opentok-android-sdk2.18.1'
+    implementation 'pub.devrel:easypermissions:3.0.0'
+
 
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     implementation 'androidx.navigation:navigation-fragment:2.2.2'
