--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "http://tokbox.bintray.com/maven" }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.0"
